[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/algodot/Documentation/Scripts/DocsPageViewer.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/algodot/Documentation/Scripts/DocumentationTree.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/algodot/Documentation/Scripts/DocumentationViewer.gd" type="Script" id=3]

[node name="DocumentationViewer" type="Control"]
anchor_right = 2.089
anchor_bottom = 2.088
margin_right = -0.135986
margin_bottom = 0.199951
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="HSplit" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplit"]
margin_right = 2131.0
margin_bottom = 283.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FilterEntry" type="LineEdit" parent="HSplit/VBoxContainer"]
margin_right = 2131.0
margin_bottom = 24.0
placeholder_text = "Filter Documentation"
placeholder_alpha = 0.502
caret_blink = true
caret_blink_speed = 0.5

[node name="DocumentationTree" parent="HSplit/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 28.0
margin_right = 2131.0
margin_bottom = 283.0

[node name="DocsPageViewer" parent="HSplit" instance=ExtResource( 1 )]
margin_top = 295.0
margin_right = 2131.0
margin_bottom = 1253.0
size_flags_horizontal = 3
